<resources>
    <string name="app_name">PettyCash</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="payer">Payer</string>
    <string name="payee">Payee</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="rtn">return</string>
    <string name="received">received</string>
    <string name="no_usages_yet">No Usages Yet</string>
    <string name="pending">pending</string>
    <string name="returned">returned</string>
    <string name="enter_usage">Enter Usage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>
